# simple-chores

./: .pre-commit-config.yaml  CLAUDE.md  NEXT_STEPS.md  README.md  ROADMAP.md  STANDALONE_PLAN.md  hacs.json  pyproject.toml  requirements_dev.txt  simple-chores-card.js
.github/workflows/: ci.yaml
custom_components/household_tasks/: const.py  manifest.json  strings.json
custom_components/simple_chores/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  frontend_resources.py  manifest.json  sensor.py  services.yaml  store.py  strings.json
custom_components/simple_chores/www/: simple-chores-card.js
simple-chores-card/: README.md
tests/: __init__.py  conftest.py  test_coordinator.py
